feat: add the correct response in gvariant endpoint